<resources>
    <string name="app_name">MyCalculator</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="p">P</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="ac">AC</string>
    <string name="s">s</string>
    <string name="m">M</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="equal">-</string>
    <string name="addition">+</string>
    <string name="substraction">*</string>
    <string name="divide">/</string>
    <string name="equalto">=</string>
</resources>
