<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="493dp"
        android:layout_height="276dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonp"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="+"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <Button
            android:id="@+id/buttons"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="-"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <Button
            android:id="@+id/buttonm"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="*"
            app:layout_column="2"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <Button
            android:id="@+id/buttond"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="/"
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <Button
            android:id="@+id/button7"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="@string/_7"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <Button
            android:id="@+id/button8"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="@string/_8"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <Button
            android:id="@+id/button9"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="@string/_9"
            app:layout_column="2"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="@string/c"
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <Button
            android:id="@+id/button4"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="@string/_4"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <Button
            android:id="@+id/button5"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="@string/_5"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="@string/_6"
            app:layout_column="2"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <Button
            android:id="@+id/buttonAC"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="="
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <Button
            android:id="@+id/button1"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="@string/_1"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="3" />

        <Button
            android:id="@+id/button2"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="@string/_2"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_row="3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="@string/_3"
            app:layout_column="2"
            app:layout_gravity="fill"
            app:layout_row="3" />

        <Button
            android:id="@+id/button0"
            android:layout_width="104.25dp"
            android:layout_height="69.5dp"
            android:text="0"
            app:layout_column="3"
            app:layout_gravity="fill"
            app:layout_row="3" />
    </androidx.gridlayout.widget.GridLayout>

    <EditText
        android:id="@+id/Value"
        android:layout_width="482dp"
        android:layout_height="134dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>